<resources>
    <string name="app_name">SpeedMath</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">Speed Math</string>
    <string name="play_button">Play</string>
    <string name="instructions_button">Instructions</string>
    <string name="highscores_button">High Scores</string>
    <string name="about_button">About</string>
    <string name="title_activity_play_game">PlayGameActivity</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="title_activity_high_scores">HighScoresActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="correct_button">Yes</string>
    <string name="wrong_button">No</string>
    <string name="countdown_title">Game Begins In:</string>
    <string name="web_view_button">Arithmetic Help</string>
    <string name="contact_string">lukehickin@hotmail.com</string>
    <string name="developer_string">Luke Hickin</string>
    <string name="version_string">Version 1.1</string>
    <string name="action_about">About</string>
    <string name="button_submit">Submit</string>
</resources>
