<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#607D8B">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_text"
        android:id="@+id/titleText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textIsSelectable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:id="@+id/playButton"
        android:layout_below="@+id/titleText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:width="130dp"
        android:height="60dp"
        android:textColor="@color/blueGrey800"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_button"
        android:id="@+id/instructionsButton"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/playButton"
        android:layout_centerHorizontal="true"
        android:width="130dp"
        android:height="60dp"
        android:textColor="@color/blueGrey800"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscores_button"
        android:id="@+id/highScoresButton"
        android:layout_marginTop="10dp"
        android:layout_below="@id/instructionsButton"
        android:layout_centerHorizontal="true"
        android:width="130dp"
        android:height="60dp"
        android:textColor="@color/blueGrey800"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_button"
        android:id="@+id/aboutButton"
        android:layout_below="@+id/highScoresButton"
        android:layout_marginTop="10dp"
        android:width="130dp"
        android:height="60dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blueGrey800"/>
</RelativeLayout>
