<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.lhickin.speedmath.AboutActivity"
    android:background="@color/blueGrey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/versionText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/version_string"
        android:textStyle="bold|italic"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/developerText"
        android:layout_below="@+id/versionText"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/developer_string"
        android:textStyle="italic"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/contact"
        android:text="@string/contact_string"
        android:textStyle="italic"
        android:textSize="16sp"
        android:layout_below="@+id/developerText"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
